--- a/tags.html
+++ b/tags.html
@@ -4,6 +4,8 @@
         <title>My Cool Site - Tags</title>
         <meta charset="utf-8" />
         <link href="https://github.com/mrboisvert/mrboisvert.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="My Cool Site Full Atom Feed" />
+
+  <link rel="stylesheet" type="text/css" href="https://github.com/mrboisvert/mrboisvert.github.io/theme/style.css" />
 </head>
 
 <body id="index" class="home">
