Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -3,14 +3,14 @@
 <head>
         <title>My Cool Site - Tags</title>
         <meta charset="utf-8" />
-        <link href="https://github.com/mrboisvert/mrboisvert.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="My Cool Site Full Atom Feed" />
+        <link href="https://mrboisvert.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="My Cool Site Full Atom Feed" />
 
-  <link rel="stylesheet" type="text/css" href="https://github.com/mrboisvert/mrboisvert.github.io/theme/style.css" />
+  <link rel="stylesheet" type="text/css" href="https://mrboisvert.github.io/theme/style.css" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="https://github.com/mrboisvert/mrboisvert.github.io/">My Cool Site <strong></strong></a></h1>
+                <h1><a href="https://mrboisvert.github.io/">My Cool Site <strong></strong></a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
         </ul></nav><!-- /#menu -->
