Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -17,6 +17,8 @@
 <h1>Archives for My Cool Site</h1>
 
 <dl>
+    <dt>Mon 04 October 2021</dt>
+    <dd><a href="https://mrboisvert.github.io/very-cool-article.html">Very Cool Article</a></dd>
     <dt>Mon 07 January 2019</dt>
     <dd><a href="https://mrboisvert.github.io/my-first-article.html">My First Article</a></dd>
 </dl>
